# my_libimagec

./: .gitignore  CMakeLists.txt  library.h
include/: libimagec.h  png_interface.h
src/: libimagec.c  libimagec.h  png_interface.c
tests/: CMakeLists.txt  get_raw_bytes.c  libpng-tests.c  libpng-tests.h  libpng_io.h  main_tests.c  matrix_tests.h  recognize_image.h  test_utils.h
utils/: alloc_utils.h  files.h  matrix.c  matrix.h
